--- a/spec/fixtures/locations.yml
+++ b/spec/fixtures/locations.yml
@@ -2,11 +2,12 @@
 #
 # Table name: locations
 #
-#  id            :integer          not null, primary key
-#  title         :string(255)
-#  translit      :string(255)
-#  location_type :integer
-#  location_id   :integer
+#  id             :integer          not null, primary key
+#  title          :string(255)
+#  translit       :string(255)
+#  location_type  :integer
+#  location_id    :integer
+#  children_count :integer          default(0)
 #
 
 region:
